[package]
name = "p2p-failover"
version = "0.1.0"
edition = "2021"

[dependencies]
dateparser = "0.2.1"
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = "0.12.12"
tokio = { version = "=1.40.0", features = ["full"] }
notify = "8.0.0"
anyhow = "1.0.97"
futures = "0.3.31"
